fix: scryfall requests too long, shortened them

--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -41,3 +41,13 @@
     width: 100%;
     border-radius: 0;
 }
+
+.MuiButton-root.logout-1 {
+    color: red;
+}
+
+.MuiButton-root.logout-2 {
+    font-weight: bold;
+    color: white;
+    background-color: red;
+}
